--- a/PlanGeneratorAPI/PlanGeneratorAPI.csproj
+++ b/PlanGeneratorAPI/PlanGeneratorAPI.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PlanGeneratorDto\PlanGeneratorDto.csproj" />
     <ProjectReference Include="..\PlanGeneratorRepository\PlanGeneratorRepository.csproj" />
   </ItemGroup>
