--- a/PlanGeneratorRepository/PlanGeneratorRepository.csproj
+++ b/PlanGeneratorRepository/PlanGeneratorRepository.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\PlanGeneratorDto\PlanGeneratorDto.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Implementations\WorkPlanGeneratorHelpers\" />
+  </ItemGroup>
+
 </Project>
