--- a/PlanGeneratorRepository/PlanGeneratorRepository.csproj
+++ b/PlanGeneratorRepository/PlanGeneratorRepository.csproj
@@ -13,4 +13,8 @@
     <Folder Include="Implementations\WorkPlanGeneratorHelpers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
